--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "Index.js",
   "dependencies": {
     "chalk": "^2.1.0",
+    "figlet": "^1.2.0",
     "inquirer": "^3.3.0",
     "inquirer-confirm": "^0.2.2"
   },
